--- a/README
+++ b/README
@@ -1,1 +1,36 @@
-This is Sofilalatina
+Dưới đây là một mẫu README phần giới thiệu cho dự án của bạn:
+
+---
+
+# Sofilalatina Translator
+
+## Giới Thiệu
+
+Sofilalatina Translator là một công cụ trực tuyến cho phép người dùng chuyển đổi văn bản giữa tiếng Việt và ngôn ngữ Sofilalatina, một ngôn ngữ giả tưởng phổ biến trong thế giới Fantasy. Công cụ này hữu ích cho việc tạo tên nhân vật, địa danh, câu lệnh phép thuật, và văn bản giao tiếp trong bối cảnh Fantasy.
+
+## Tính Năng
+
+- **Chuyển Đổi Văn Bản**: Chuyển đổi văn bản từ tiếng Việt sang Sofilalatina và ngược lại.
+- **Phát Âm Thanh**: Phát âm văn bản đã chuyển đổi bằng giọng nữ Anh-Anh.
+- **Thông Tin Bổ Sung**: Cung cấp thông tin chi tiết về các ứng dụng của Sofilalatina trong thế giới Fantasy.
+
+## Sử Dụng
+
+1. **Chọn Hướng Dẫn**
+   - Chọn hướng dịch từ menu dropdown (`Việt Nam sang Sofilalatina` hoặc `Sofilalatina sang Việt Nam`).
+
+2. **Nhập Văn Bản**
+   - Nhập nội dung cần chuyển đổi vào ô văn bản.
+
+3. **Chuyển Đổi**
+   - Nhấn nút "Chuyển" để bắt đầu chuyển đổi văn bản.
+
+4. **Phát Âm**
+   - Nhấn nút "Phát Âm Thanh" để nghe phát âm văn bản đã chuyển đổi.
+
+5. **Xem Thông Tin Bổ Sung**
+   - Nhấn nút "Đọc thêm" để xem thông tin về ứng dụng của Sofilalatina.
+
+---
+
+Chúc bạn thành công với dự án của mình! Nếu cần thêm bất kỳ sự hỗ trợ nào, đừng ngần ngại hỏi nhé.
